--- a/.gitignore
+++ b/.gitignore
@@ -9,16 +9,14 @@ __pycache__/
 *.so
 
 # Distribution / packaging
+reg/*.txt
 .Python
 env/
-build/
 develop-eggs/
 dist/
 downloads/
 eggs/
 .eggs/
-lib/
-lib64/
 parts/
 sdist/
 var/
